Hopefully fixed some typos (can't fix last commit message :( )

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="cs">
 <head>
     <meta charset="UTF-8">
-    <title>NahlašBombu.cz</title>Využíváme nejmodernějších kryptovaích technologií
-    <meta content="Nahlášením bomby v den zkoušky se člověk může na VŠE (a nyní i ČVUT) vyhnout mnoha problémům. Policie ovšem nově přichází s experty na kryptování, proto jsem se rozhold vytvořit tuto službu, která za mírný poplatek 0.003BTC nahlásí bombu zcela anonymně a bez rizika."
+    <title>NahlašBombu.cz</title>
+    <meta content="Nahlášením bomby v den zkoušky se člověk může na VŠE (a nyní i ČVUT) vyhnout mnoha problémům. Policie ovšem nově přichází s experty na kryptování, proto jsem se rozhodl vytvořit tuto službu, která za mírný poplatek 0.003BTC nahlásí bombu zcela anonymně a bez rizika."
           name="description">
     <link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
     <link href="/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
@@ -25,11 +25,11 @@
         <div class="content">
             <article>
                 <h3>Proč?</h3>
-                <span>Nahlášením bomby v den zkoušky se člověk může na VŠE (a nyní i ČVUT) vyhnout mnoha problémům. Policie ovšem nově přichází s experty na kryptování, proto jsem se rozhold vytvořit tuto službu, která za mírný poplatek 0.003BTC nahlásí bombu zcela anonymně a bez rizika.</span>
+                <span>Nahlášením bomby v den zkoušky se člověk může na VŠE (a nyní i ČVUT) vyhnout mnoha problémům. Policie ovšem nově přichází s experty na kryptování, proto jsem se rozhodl vytvořit tuto službu, která za mírný poplatek 0.003BTC nahlásí bombu zcela anonymně a bez rizika.</span>
             </article>
             <article>
                 <h3>ANONYMNĚ</h3>
-                <span>Využíváme nejmodernějších kryptovaích technologií</span>
+                <span>Využíváme nejmodernějších kryptovacích technologií</span>
             </article>
             <article>
                 <h3>RYCHLE</h3>
@@ -50,7 +50,7 @@
                     <span class="name">Jana</span>
                 </div>
                 <div class="text">
-                    Statistika mi nidky nešla, neučila jsem se a chodila pařit, než mě vyhodili. Takto jsem alespoň mohla zkazit den ostatním studentům. Díky
+                    Statistika mi nikdy nešla, neučila jsem se a chodila pařit, než mě vyhodili. Takto jsem alespoň mohla zkazit den ostatním studentům. Díky
                     NahlašBombu.cz za rychlé a bezproblémové jednání!
                 </div>
             </div>
@@ -61,7 +61,7 @@
                 </div>
                 <div class="text">
                     Již od mala jsem byl velký fanoušek hry Counter Strike, tak jsem si chtěl zkusit plantnout bombu i v reálném životě. Nechtěl jsem ale nikoho
-                    zranit, tak jse ji alespoň jen nahlásil. Díky moc!
+                    zranit, tak jsem ji alespoň nahlásil. Díky moc!
                 </div>
             </div>
             <div class="message">
